# test-of-tensorflow-c

./: README.md
codes/: .demotest.py.swp  CMakeLists.txt  Untitled Document  ann_model_loader.cpp  demotest.py  freeze.sh  load.py  main.cpp  main2.cpp  model_loader_base.h
codes/model/: liner_freeze.pb  linermodel.ckpt.data-00000-of-00001  linermodel.ckpt.index  linermodel.pbtxt
tensorflow-tutorial-master/: nn_model_frozen.pb
tensorflow-tutorial-master/cpp/ckpt/: checkpoint  nn_model.ckpt.data-00000-of-00001  nn_model.ckpt.index
tensorflow-tutorial-master/cpp/model/: nn_model.pbtxt  nn_model_frozen.pb
tensorflow-tutorial-master/cpp/src/: CMakeLists.txt  run.sh
